--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
                 <a href="" target="_blank"><i class="fa fa-twitter"></i></a>
             </div>
         </nav>
-        <!-- <nav class="menu-side">
+         <nav class="menu-side">
             <a href="index.html">Front-end Development</a>
             <a href="design.html">Projects</a>
             <a href="portfolio.html">Portfolio</a>
@@ -57,9 +57,9 @@
             <a href="mailto:dhanushdeveloper.java@gmail.com"><i class="fa fa-email"></i>dhanushdeveloper.java@gmail.com</a>
             <a href="tel://1-408-753-7839">408.753.7839</a>
         </nav>
-    </div> -->
+    </div> 
 
-    <!-- <button class="menu-button" id="open-button">Open Menu</button> -->
+     <button class="menu-button" id="open-button">Open Menu</button> 
 
     <div class="content-wrap">
         <div id="homePage" class="content">
